# hao-test-gx06nf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/kubernetes/base/: configmap.yaml  (+4 more)
infrastructure/nginx/: nginx.conf
infrastructure/scripts/: backup-db.sh  deploy.sh  init-db.sh  monitoring-setup.sh  restore-db.sh  rollback.sh
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  provider.tf  variables.tf
src/backend/: .dockerignore  .env.example  .flaskenv  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  wsgi.py
src/backend/src/: __init__.py  main.py
src/backend/src/api/: __init__.py  routes.py
src/backend/src/api/auth/: __init__.py  decorators.py  google.py  jwt.py  middleware.py  utils.py
src/backend/src/api/endpoints/: __init__.py  health.py  items.py  projects.py  specifications.py  users.py
src/backend/src/api/errors/: __init__.py  exceptions.py  handlers.py
src/backend/src/api/middleware/: __init__.py  cache.py  logging.py  rate_limit.py  security.py
src/backend/src/api/schemas/: __init__.py  items.py  projects.py  specifications.py  users.py
src/backend/src/config/: __init__.py  cache.py  database.py  logging.py  security.py  settings.py
src/backend/src/core/: __init__.py  cache.py  database.py  logging.py  security.py
src/backend/src/db/: __init__.py  base.py  session.py
src/backend/src/db/migrations/: __init__.py  env.py  script.py.mako
src/backend/src/db/models/: __init__.py  items.py  projects.py  specifications.py  users.py
src/backend/src/db/repositories/: __init__.py  base.py  items.py  projects.py  specifications.py  users.py
src/backend/src/services/: __init__.py  auth.py  cache.py  items.py  projects.py  specifications.py  users.py
src/backend/src/utils/: __init__.py  constants.py  decorators.py  helpers.py  validators.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/integration/: __init__.py  test_auth.py  test_items.py  test_projects.py  test_specifications.py
src/backend/tests/unit/: __init__.py  test_auth.py  test_cache.py  test_models.py  test_repositories.py  test_schemas.py  test_services.py  test_validators.py
(+41 files in other folders)
